<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerHorizontal="true"
    tools:context="com.milk.secretagent.AddTaskActivity"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_task_title"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/layout_add_task_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_task_title"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:clickable="false"
        android:onClick="addTask" >

        <ImageView
            android:id="@+id/add_task_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:src="@drawable/btn_add_task_record"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:maxHeight="48dp"
            android:maxWidth="48dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_task_record"
            android:clickable="false"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_task_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_add_task_record"
        android:orientation="horizontal"
        android:clickable="false"
        android:onClick="addTask" >

        <ImageView
            android:id="@+id/add_task_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:src="@drawable/btn_add_task_location"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:maxHeight="48dp"
            android:maxWidth="48dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_task_location"
            android:clickable="false"
            android:layout_gravity="center_vertical|left" />
    </LinearLayout>

</RelativeLayout>
